--- a/src/app/other/other.component.html
+++ b/src/app/other/other.component.html
@@ -2,5 +2,13 @@
   other works!
 </p>
 <div style="text-align: right;">
-  <app-another></app-another>
+  <app-another>
+    <div>
+      <h1>Hello!</h1>
+      <p>World!</p>
+    </div>
+  </app-another>
+  <app-another>
+    <p>Something else!</p>
+  </app-another>
 </div>
